Too much fixing.

--- a/FC.css
+++ b/FC.css
@@ -93,7 +93,6 @@
 .sidebarR {
     height: 100%;
     width: 150px;
-    position: absolute;
     float: right;
     top: 0;
     padding-top: 40px;
